Date	Added
12/3
	* hacked the frozen mob issue [MouseJstr]
	* Fixed a battle_range crash [MouseJstr]
        * Updated Stone Curse, Soul Drain, Auto Berserk [celest]
        * Added a fix for MVP exp being multiplied twice by Gengar
        * Modified battle_range to check for sd first [celest]

12/2
	* Fixed double login feature, resets online users when map connects to char [Wizputer]
	* Changed all LOGS inserts to INSERT DELAYED (MySQL has this feature and cache unimportant queries, then 
	  executes them at once together = 10x faster) [Lupus]
        * Skill Updates [celest]
          - Modified Weapon Refine - should only +1 every time.
          - Updated Berserk, Chase Walk, Slim Pitcher
          - Added skill_range_leniency : In some cases when moving to cast a skill the 
            exe will a send a UseSkill packet before the server has moved us to the 
            correct position, causing it to fail. Leaving this at 1 should be enough.
          - Fixed a bug that was causing monsters not to move towards the target
        * Added check for clif.c in case the server didn't realise we've died [celest]
        * Added a fix for @npcmove by JohnC and Fredzilla
        * Added motd_type : Set this to 1 if your clients have langtype problems and 
          can't display the motd properly[celest]
        * Edited atcommand.c to fix compile warnings [celest]

12/1
	- Make it build against gcc 2.95 [MouseJstr]
	- Changed #define MAX_PET_DB to 300, it's easier for people adding new pets like this. [Nas]
        * Skill Updates [celest]
          - Updated Poison React
          - Added Soul Change, Soul Burn
          - Added a somewhat crude timer for Venom splasher
          - Added a fix for Guild Skills causing crashes by Sara, thanks!

11/30
        * Fixed client crash when disguised characters die [celest]
        * Skill Updates [celest]
          - Fixed and finished Guild Skills (~90%)