@@ -4964,7 +4964,7 @@ int battle_check_range(struct block_list *src,struct block_list *bl,int range)
 // be lenient if the skill was cast before we have moved to the correct position [Celest]
 		if (src->type != BL_PC)
 			return 0;
-		else if (src->type == BL_PC) {
+		else if (bl->type == BL_PC) {
 			struct map_session_data *sd;
 			nullpo_retr(0, (sd=(struct map_session_data *)bl));
 			if (sd->walktimer != -1 && !((arange-=battle_config.skill_range_leniency)<=range))
