@@ -1,4 +1,10 @@
 Date	Added
+12/4
+	* Fixed a change associated with NPC_BARRIER [MouseJstr]
+	* Renamed flush_fifos_at_exit to flush_fifos [MouseJstr]
+	* call check_connect_char_server() on char_server disconnect [MouseJstr]
+	* stale skill groups were crashing server [MouseJstr]
+	* Fixed crash in SC_LULLABY [MouseJstr]
 12/3
 	* hacked the frozen mob issue [MouseJstr]
 	* Fixed a battle_range crash [MouseJstr]
